# IgniteCV

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.28d8f7a  CMakeLists.txt.user.956e8e2  FireSafetyTest.cpp  FlameProcessing.cpp  FlameProcessing.h  OpenCV_Integration_ja.ts  README.md  calculateWidth.cpp  calculateWidth.h  calculateWidth.ui  flamefeature.cpp  flamefeature.h  flamefeature.ui  frequencydetection.cpp  frequencydetection.h  frequencydetection.ui  imagesubtraction.cpp  imagesubtraction.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  qgraphicsviewresize.cpp  qgraphicsviewresize.h  scalingtool.cpp  scalingtool.h  scalingtool.ui  scalingtool.ui.autosave  test.ui  utils.cpp  utils.h
data/: background.tif  original.tif
fftw-3.3.5-dll64/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
src/: FireSafetyTest.cpp  FrameAnalyzer.cpp  FrameAnalyzer.hpp  Stub.cpp  contours.cpp  contours.hpp  main.cpp
src/.cache/clangd/index/: main.cpp.8266E1851DCAA9ED.idx
translations/: OpenCV_Integration_ja.qm
